finish first box

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <!--------------------------------LOGO-------------------------------------->
             <div class="mosalas-header">
-            <div class="container">
+                <div class="container">
                     <div class="logo">
                         <a href="#" title="logo"><img src="images/logo.png" alt="logo"></a>
                     </div>
@@ -99,17 +99,63 @@
             <div class="container">
                 <div class="pull-right">
                     <!--------------------------------MID--------------------------------------->
+                    <div class="margin-top"></div>
                     <div class="column-mid">
+                        <!--------------------------------FIRST - BOX--------------------------------------->
+
+                        <div class="first-box">
+                            <section>
+                                <article>
+                                    <div class="container">
+                                        <div class="first-box-details">
+                                            <div class="first-box-title">
+                                                <a href="#">
+                                                    <h3>یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟ +جزئیات
+                                                    </h3>
+                                                </a>
+                                            </div>
+                                            <div class="first-box-pragraph">
+                                                <p>
+                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                                    اقشار
+                                                    ضعیف جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                            </div>
+                                        </div>
+                                        <div class="first-box-image">
+                                            <a href="#">
+                                                <img src="/images/یارانه.jpg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </article>
+                            </section>
+                        </div>
+                        <!--------------------------------SECOND - BOX--------------------------------------->
                         <div class="margin-top"></div>
-                        <div class="first-box">first box</div>
-                        <div class="margin-top"></div>
-                        <div class="second-box">second box</div>
+                        <div class="clear-fix"></div>
+                        <div class="second-box">
+                            <!--
+                                    <a href="#">
+                                        <section>
+                                            <figure>
+                                                <img src="/images/AQ50Y4ZOqwhG.jpg" alt="">
+                                        <figcaption>
+                                            <h4>دستور فوری جهانگیری|شناسایی عوامل‌اجتماع مشهد</h4>
+                                            <p>
+                                                دستور جهانگیری به وزیر کشور برای شناسایی عوامل تشکیل اجتماع مشهد
+                                            </p>
+                                        </figcaption>
+                                    </figure>
+                                </section>
+                            </a> 
+                        -->
+                        </div>
                         <div class="margin-top"></div>
                         <div class="column-mid-details">تیتر دوم</div>
                     </div>
                     <!--------------------------------RIGHT------------------------------------->
+                    <div class="margin-top"></div>
                     <div class="column-right">
-                        <div class="margin-top"></div>
                         نقد و نظر
                     </div>
                 </div>
