finish section two

--- a/index.html
+++ b/index.html
@@ -103,53 +103,41 @@
                         <div class="margin-top"></div>
                         <!--------------------------------FIRST - BOX--------------------------------------->
 
-                        <div class="first-box">
-                            <section>
-                                <article>
-                                    <div class="container">
-                                        <div class="first-box-details">
-                                            <div class="first-box-title">
-                                                <a href="#">
-                                                    <h3>یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟ +جزئیات
-                                                    </h3>
-                                                </a>
-                                            </div>
-                                            <div class="first-box-pragraph">
-                                                <p>
-                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
-                                                    اقشار
-                                                    ضعیف جامعه یارانه جدیدی را در نظر گرفته اند. </p>
-                                            </div>
-                                        </div>
-                                        <div class="first-box-image">
-                                            <a href="#">
-                                                <img src="/images/یارانه.jpg" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </article>
-                            </section>
-                        </div>
+                        <section class="first-box">
+                            <div class="container">
+                                <div class="first-box-details">
+                                    <!-----------------TITLE--------------->
+                                    <h1>
+                                        <a href="#">یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                            +جزئیات</a>
+                                    </h1>
+                                    <!-----------------LEAD--------------->
+                                    <p>
+                                        در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                        اقشار
+                                        ضعیف جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                </div>
+                                <div class="first-box-image">
+                                    <a href="#">
+                                        <img src="/images/یارانه.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </section>
                         <!--------------------------------SECOND - BOX--------------------------------------->
                         <div class="margin-top"></div>
-                        <div class="clear-fix"></div>
-                        <div class="second-box">
-                            <!--
-                                    <a href="#">
-                                        <section>
-                                            <figure>
-                                                <img src="/images/AQ50Y4ZOqwhG.jpg" alt="">
-                                        <figcaption>
-                                            <h4>دستور فوری جهانگیری|شناسایی عوامل‌اجتماع مشهد</h4>
-                                            <p>
-                                                دستور جهانگیری به وزیر کشور برای شناسایی عوامل تشکیل اجتماع مشهد
-                                            </p>
-                                        </figcaption>
-                                    </figure>
-                                </section>
-                            </a> 
-                        -->
-                        </div>
+                        <section class="second-box">
+                            <figure>
+                                <img src="/images/AQ50Y4ZOqwhG.jpg" alt="">
+                                <figcaption>
+                                    <h2>دستور فوری جهانگیری|شناسایی عوامل‌اجتماع مشهد</h2>
+                                    <p>
+                                        دستور جهانگیری به وزیر کشور برای شناسایی عوامل تشکیل اجتماع مشهد
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </section>
+                        </a>
                         <div class="margin-top"></div>
                         <div class="column-mid-details">تیتر دوم</div>
                     </div>
