--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                                         </a>
                                     </div>
                                     <div class="container">
-                                        <div class="news-title">
+                                        <div class="title">
                                             <h3> <a href="#">سقوط شدید قیمت سکه/ بازگشت سکه به کانال 12 میلیونی</a>
                                             </h3>
                                         </div>
-                                        <div class="news-lead">
+                                        <div class="lead">
                                             <p>
                                                 قیمت دلار امروز در بازار با رشد ۴۰۰ تومانی به ۲۸,۰۰۰ (بیست و هشت هزار)
                                                 تومان رسید.
@@ -177,10 +177,10 @@
                                         </a>
                                     </div>
                                     <div class="container">
-                                        <div class="news-title">
+                                        <div class="title">
                                             <h3> <a href="#">پیش بینی بورس امروز؛ روند صعودی بورس بازمی گردد؟</a> </h3>
                                         </div>
-                                        <div class="news-lead">
+                                        <div class="lead">
                                             <p>
                                                 هیچ‌کدام از تحلیل‌گرانی که در نظرخواهی درباره وضعیت بورس تهران شرکت
                                                 کرده‌اند، شاخص امروز بورس تهران مثبت ارزیابی نکرده‌اند. </p>
@@ -196,11 +196,11 @@
                                         </a>
                                     </div>
                                     <div class="container">
-                                        <div class="news-title">
+                                        <div class="title">
                                             <h3><a href="#">سردار جلالی: آمریکا به دنبال جنگ علیه زیرساخت‌های ایران
                                                     است</a></h3>
                                         </div>
-                                        <div class="news-lead">
+                                        <div class="lead">
                                             <p>
                                                 رئیس سازمان پدافند غیرعامل گفت: آمریکایی‌ها پس از ناامیدی از جبهه نظامی
                                                 به دنبال جنگ علیه زیرساخت‌های حیاتی کشور رفته اند. </p>
@@ -216,11 +216,11 @@
                                         </a>
                                     </div>
                                     <div class="container">
-                                        <div class="news-title">
+                                        <div class="title">
 
                                             <h3><a href="#">ماکرون به ما حمله تروریستی اسلامی شده است</a></h3>
                                         </div>
-                                        <div class="news-lead">
+                                        <div class="lead">
                                             <p>
                                                 عامل حمله نیس یک «تروریست اسلام‌گرا» بود
 
@@ -237,10 +237,10 @@
                                         </a>
                                     </div>
                                     <div class="container">
-                                        <div class="news-title">
+                                        <div class="title">
                                             <h3><a href="#">دوست بن‌سلمان:او از ایران و مردم عربستان می‌ترسد</a></h3>
                                         </div>
-                                        <div class="news-lead">
+                                        <div class="lead">
                                             <p>
                                                 معارض عربستانی: احتمال ترور بن سلمان در صورت اعلام سازش با اسرائیل وجود
                                                 دارد
