--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="icon" href="./favicon.ico" type="image/gif">
+    <link rel="icon" href="./favicon.ico" type="image/gif">شسی
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
 </head>
@@ -112,9 +112,7 @@
                                     </h1>
                                     <!-----------------LEAD--------------->
                                     <p>
-                                        در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
-                                        اقشار
-                                        ضعیف جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                        در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای اقشار ضعیف جامعه یارانه جدیدی را در نظر گرفته اند. </p>
                                 </div>
                                 <div class="first-box-image">
                                     <a href="#">
@@ -162,8 +160,7 @@
                                         </div>
                                         <div class="lead">
                                             <p>
-                                                قیمت دلار امروز در بازار با رشد ۴۰۰ تومانی به ۲۸,۰۰۰ (بیست و هشت هزار)
-                                                تومان رسید.
+                                                قیمت دلار امروز در بازار با رشد ۴۰۰ تومانی به ۲۸,۰۰۰ (بیست و هشت هزار) تومان رسید.
                                             </p>
                                         </div>
                                     </div>
@@ -182,8 +179,7 @@
                                         </div>
                                         <div class="lead">
                                             <p>
-                                                هیچ‌کدام از تحلیل‌گرانی که در نظرخواهی درباره وضعیت بورس تهران شرکت
-                                                کرده‌اند، شاخص امروز بورس تهران مثبت ارزیابی نکرده‌اند. </p>
+                                                هیچ‌کدام از تحلیل‌گرانی که در نظرخواهی درباره وضعیت بورس تهران شرکت کرده‌اند، شاخص امروز بورس تهران مثبت ارزیابی نکرده‌اند. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -202,8 +198,7 @@
                                         </div>
                                         <div class="lead">
                                             <p>
-                                                رئیس سازمان پدافند غیرعامل گفت: آمریکایی‌ها پس از ناامیدی از جبهه نظامی
-                                                به دنبال جنگ علیه زیرساخت‌های حیاتی کشور رفته اند. </p>
+                                                رئیس سازمان پدافند غیرعامل گفت: آمریکایی‌ها پس از ناامیدی از جبهه نظامی به دنبال جنگ علیه زیرساخت‌های حیاتی کشور رفته اند. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -242,8 +237,7 @@
                                         </div>
                                         <div class="lead">
                                             <p>
-                                                معارض عربستانی: احتمال ترور بن سلمان در صورت اعلام سازش با اسرائیل وجود
-                                                دارد
+                                                معارض عربستانی: احتمال ترور بن سلمان در صورت اعلام سازش با اسرائیل وجود دارد
                                             </p>
                                         </div>
                                     </div>
@@ -355,9 +349,9 @@
                                         </div>
                                         <div class="title-name">
                                             <h4>
-                                                <a href="#"> 
+                                                <a href="#">
                                                     ترس وحشتناک در چهار تیم بزرگ ایران
-                                                    </a>
+                                                </a>
                                             </h4>
                                             <a href="#"><i class="fa fa-edit"> جلال چراغپور</i>
                                             </a>
@@ -375,9 +369,9 @@
                                         </div>
                                         <div class="title-name">
                                             <h4>
-                                                <a href="#"> 
+                                                <a href="#">
                                                     جهل نتیجه جعل ؛ رازهای جریان تحریف
-                                                    </a>
+                                                </a>
                                             </h4>
                                             <a href="#"><i class="fa fa-edit"> عباس سلیمی‌نمین</i>
                                             </a>
