finish last page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مثلث</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="icon" href="./favicon.ico" type="image/gif">
@@ -146,12 +147,12 @@
                         <div class="margin-top"></div>
                         <!--------------------------------part 2--------------------------------------->
                         <div class="column-mid-news">
-                            <div class="header-news">
-                                <h3>
-                                    <a title="تیتر دوم" href="#">تیتر دوم</a>
-                                </h3>
-                            </div>
                             <section class="news">
+                                <header class="header-news">
+                                    <h3>
+                                        <a title="تیتر دوم" href="#">تیتر دوم</a>
+                                    </h3>
+                                </header>
                                 <ul>
                                     <li>
                                         <div class="container">
@@ -162,6 +163,9 @@
                                             </div>
                                             <div class="news-details">
                                                 <div class="title">
+                                                    <div class="up-title">
+                                                        <h5>سعدالله زارعی:</h5>
+                                                    </div>
                                                     <h3>
                                                         <a title="سقوط شدید قیمت سکه/ بازگشت سکه به کانال 12 میلیونی"
                                                             href="#">سقوط شدید قیمت سکه/ بازگشت سکه به کانال 12
@@ -187,6 +191,9 @@
                                         <div class="container">
                                             <div class="news-details">
                                                 <div class="title">
+                                                    <div class="up-title">
+                                                        <h5>سعدالله زارعی:</h5>
+                                                    </div>
                                                     <h3> <a title="پیش بینی بورس امروز؛ روند صعودی بورس بازمی گردد؟"
                                                             href="#">پیش بینی بورس امروز؛ روند صعودی بورس بازمی
                                                             گردد؟</a>
@@ -210,6 +217,9 @@
                                         </div>
                                         <div class="container">
                                             <div class="news-details">
+                                                <div class="up-title">
+                                                    <h5>سعدالله زارعی:</h5>
+                                                </div>
                                                 <div class="title">
                                                     <h3><a title="سردار جلالی: آمریکا به دنبال جنگ علیه زیرساخت‌های ایران
                                                 است" href="#">سردار جلالی: آمریکا به دنبال جنگ علیه زیرساخت‌های ایران
@@ -233,6 +243,9 @@
                                         </div>
                                         <div class="container">
                                             <div class="news-details">
+                                                <div class="up-title">
+                                                    <h5>سعدالله زارعی:</h5>
+                                                </div>
                                                 <div class="title">
 
                                                     <h3><a title="ماکرون به ما حمله تروریستی اسلامی شده است"
@@ -256,6 +269,9 @@
                                         </div>
                                         <div class="container">
                                             <div class="news-details">
+                                                <div class="up-title">
+                                                    <h5>سعدالله زارعی:</h5>
+                                                </div>
                                                 <div class="title">
                                                     <h3><a title="دوست بن‌سلمان:او از ایران و مردم عربستان می‌ترسد"
                                                             href="#">دوست بن‌سلمان:او از ایران و مردم عربستان
@@ -281,8 +297,8 @@
                     <!--------------------------------RIGHT------------------------------------->
                     <div class="column-right">
                         <div class="margin-top"></div>
-                        <!--------------------------------YADDASHT------------------------------------->
-                        <div class="yaddasht">
+                        <!--------------------------------review------------------------------------->
+                        <section class="review">
                             <div class="header-news">
                                 <h3>
                                     <a title="نقد و نظر" href="#"> نقد و نظر</a>
@@ -304,8 +320,10 @@
                                                     تا
                                                     روحانی</a>
                                             </h4>
-                                            <a title="عباس سلیمی‌ نمین" href="#"><i class="fa fa-edit"> عباس سلیمی‌
-                                                    نمین</i>
+                                            <a id="name-icon" title="عباس سلیمی‌ نمین" href="#"><i class="fa fa-edit">
+                                                </i>
+                                                عباس سلیمی‌
+                                                نمین
                                             </a>
                                         </div>
                                     </div>
@@ -325,8 +343,8 @@
                                                     ایرانی‌ها ضربه‌های مهلکی را بر پیکر آمریکایی‌ها وارد کرده‌اند
                                                 </a>
                                             </h4>
-                                            <a title="سعدالله زارعی" href="#"><i class="fa fa-edit"> سعدالله زارعی
-                                                </i>
+                                            <a id="name-icon" title="سعدالله زارعی" href="#"><i class="fa fa-edit"></i>
+                                                سعدالله زارعی
                                             </a>
                                         </div>
                                     </div>
@@ -345,7 +363,8 @@
                                                     کارگزاران به امید شکفتن ستاره بخت علی لاریجانی
                                                 </a>
                                             </h4>
-                                            <a title="صادق زیباکلام" href="#"><i class="fa fa-edit"> صادق زیباکلام</i>
+                                            <a id="name-icon" title="صادق زیباکلام" href="#"><i class="fa fa-edit"></i>
+                                                صادق زیباکلام
                                             </a>
                                         </div>
                                     </div>
@@ -365,7 +384,8 @@
                                                     ترس وحشتناک در چهار تیم بزرگ ایران
                                                 </a>
                                             </h4>
-                                            <a title="جلال چراغپور" href="#"><i class="fa fa-edit"> جلال چراغپور</i>
+                                            <a id="name-icon" title="جلال چراغپور" href="#"><i class="fa fa-edit"> </i>
+                                                جلال چراغپور
                                             </a>
                                         </div>
                                     </div>
@@ -384,8 +404,10 @@
                                                     جهل نتیجه جعل ؛ رازهای جریان تحریف
                                                 </a>
                                             </h4>
-                                            <a title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit"> عباس
-                                                    سلیمی‌نمین</i>
+                                            <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                                </i>
+                                                عباس
+                                                سلیمی‌نمین
                                             </a>
                                         </div>
                                     </div>
@@ -404,7 +426,9 @@
                                                     درباره هجرت از «خود» به «خدا»
                                                 </a>
                                             </h4>
-                                            <a title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit"> مصطفی صادقی</i>
+                                            <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                                </i>
+                                                مصطفی صادقی
                                             </a>
                                         </div>
                                     </div>
@@ -422,7 +446,9 @@
                                                 <a title="مذاکره بی مذاکره ؛ پایان رویای غرب باوری" href="#">
                                                     مذاکره بی مذاکره ؛ پایان رویای غرب باوری </a>
                                             </h4>
-                                            <a title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit"> جعفر قنادباشی</i>
+                                            <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                                </i>
+                                                جعفر قنادباشی
                                             </a>
                                         </div>
                                     </div>
@@ -441,15 +467,17 @@
                                                     جهل نتیجه جعل ؛ رازهای جریان تحریف
                                                 </a>
                                             </h4>
-                                            <a title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit"> عباس
-                                                    سلیمی‌نمین</i>
+                                            <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                                </i>
+                                                عباس
+                                                سلیمی‌نمین
                                             </a>
                                         </div>
                                     </div>
                                 </li>
                             </ul>
                             <a title="بیشتر" class="more" href="#">بیشتر</a>
-                        </div>
+                        </section>
                     </div>
                 </div>
                 <!--------------------------------LEFT-------------------------------------->
@@ -648,7 +676,7 @@
                     <li><a title="جامعه" href="#">جامعه</a><i class="fa fa-circle"></i></li>
                     <li><a title="ورزشی" href="#">ورزشی</a><i class="fa fa-circle"></i></li>
                     <li><a title=" عکس" href="#"> عکس</a><i class="fa fa-circle"></i></li>
-                    <li><a title="چندرسانه ای" href="#">چندرسانه ای</a><i class="fa fa-circle"></i></li>
+                    <li><a title="چندرسانه ای" href="#">چندرسانه ای</a></li>
                 </ul>
             </div>
         </nav>
@@ -681,6 +709,16 @@
         <div class="creator">
             <p>تمامی حقوق این سایت متعلق به پایگاه خبری تحلیلی مثلث میباشد و استفاده از مطالب آن با ذکر منبع بلامانع است
             </p>
+        </div>
+        <div class="logo-creator">
+            <a href="#" title="creator">
+                <div class="img-creartor">
+                    <img src="./images/aasaam.png" alt="logo">
+                </div>
+                <div class="text-creator">
+                   <a href="#">طراحی سایت خبری و خبرگزاری آسام</a> 
+                </div>
+            </a>
         </div>
     </footer>
 </body>
