--- a/index.html
+++ b/index.html
@@ -634,25 +634,8 @@
                                         این
                                         بار دروغ لندنی!</a>
                                 </li>
-                                <li>
-                                    <a title="جدیدترین عکسهای لورفته از مهناز افشار!" href="#"> <i
-                                            class="fa fa-circle"></i> جدیدترین عکسهای لورفته از
-                                </li>
-                                <li>
-                                    <<<<<<< HEAD <a title="جدیدترین عکسهای لورفته از مهناز افشار!" href="#"> <i
-                                            class="fa fa-circle"></i> جدیدترین عکسهای لورفته از
-                                        =======
-                                        <a title="جدیدترین عکسهای لورفته از مهناز افشار!" href="#"> <i
-                                                class="fa fa-circle"></i> جدیدترین عکسهای لورفته از
-                                            >>>>>>> a428b1c65041fd5dcea7c8b57f1c535e60e66013
-                                            گ های ایرانی</a>
-                                        <a title="خرید بلیط هواپیما" href="#">خرید بلیط هواپیما</a>
-                                        <a title="دانلود سریال" href="#">دانلود سریال</a>
-                                        <a title="خرید ممبر پاپ اپ" href="#">خرید ممبر پاپ اپ</a>
-                                        <a title="دستگاه ضد عفونی کننده دست اتوماتیک" href="#">دستگاه ضد عفونی کننده دست
-                                            اتوماتیک</a>
-                                        <a title="دانلود آهنگ غمگین" href="#">دانلود آهنگ غمگین</a>
-                                        <a title="دانلود آهنگ جدید" href="#">دانلود آهنگ جدید</a>
+                            </ul>
+                            <a title="اخبار بیشتر" class="more" href="#">اخبار بیشتر</a>
                         </div>
                     </div>
                 </div>
