finish page two

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                                         بار دروغ لندنی!</a>
                                 </li>
                             </ul>
-                            <a title="اخبار بیشتر" class="more" href="#">اخبار بیشتر</a>
+                            <a title="آرشیو" class="more" href="#">آرشیو </a>
                         </div>
                     </div>
                 </div>
