edit and finish

--- a/news.html
+++ b/news.html
@@ -77,8 +77,8 @@
             <div class="wrapper">
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
-                        <li><a title="اخبار" href="./news.html"> اخبار </a></li>
+                        <li><a title="صفحه نخست" href=""> صفحه نخست </a></li>
+                        <li><a title="اخبار" href=""> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
                         <li><a title="فرهنگ" href="#"> فرهنگ </a></li>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <header>
-                    <a class="up-title"></a>
+                    <span class="up-title" > تمرین صفحه اخبار  </span>
                     <h1 class="title">دانلود سریال کرگدن / دانلود قسمت اول سریال کرگدن</h1>
                     <div class="lead">دانلود سریال کرگدن دانلود قسمت اول سریال کرگدن دانلود قسمت 1 سریال کرگدن</div>
                     <div class="primary-file"> <a href="#"><img src="./images/kargadan.jpg" alt="">
