--- a/news.html
+++ b/news.html
@@ -77,8 +77,8 @@
             <div class="wrapper">
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href=""> صفحه نخست </a></li>
-                        <li><a title="اخبار" href=""> اخبار </a></li>
+                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
                         <li><a title="فرهنگ" href="#"> فرهنگ </a></li>
